fix: mf-5745 scrollbar on dark mode, stable scrollbar gutter

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -189,3 +189,11 @@ input[type='search']::-webkit-search-results-button,
 input[type='search']::-webkit-search-results-decoration {
     -webkit-appearance: none;
 }
+/* turn scrollbar into dark mode */
+html.dark {
+    color-scheme: dark;
+}
+html,
+body {
+    scrollbar-gutter: stable;
+}
